ID-3522 [FIX] Fixes field alignment on the same level (#572)
* ID-3522 [FIX] Fixes date/time range overlapping in case of flexible width

* Recovered focuse-outline class for date and time pickers

* ID-3522 [FIX] Fixed responsiveness

* Moved date/time range styles from api to widget

* ID-3522 [FIX] Remove important from time picker selectors

* Removed important

* ID-3522 [FIX] Fixes time picker border cut in case of 25% width

* ID-3539 [FIX] Fixed image and file fields alignment

* ID-3522 [FIX] Improved date/time pickers UI for small size

* ID-3522 [FIX] Fixed required changes

--- a/css/builder.css
+++ b/css/builder.css
@@ -460,6 +460,10 @@ nav > .btn {
   overflow: hidden;
 }
 
+.fileUpload.form-group {
+  margin-bottom: 11px;
+}
+
 .fileUpload-disabled label {
   background-color: #e1e1e1;
   border-radius: 31px !important;
@@ -592,6 +596,17 @@ nav > .btn {
 .fl-time-range,
 .fl-date-range {
   column-gap: 5px;
+  flex-wrap: nowrap;
+}
+
+.fl-time-range .fl-time-picker,
+.fl-date-range .fl-date-picker {
+  width: 100%;
+}
+
+.fl-date-range .arrow-right,
+.fl-time-range .arrow-right {
+  margin-bottom: 15px;
 }
 
 input[type="time"].form-control {
@@ -1288,8 +1303,10 @@ form hr {
 
 /* Geolocation */
 
-.geolocation.btn-primary {
+.geolocation.btn.btn-primary {
   column-gap: 10px;
+  display: flex;
+  align-items: center;
 }
 
 .geolocation.text-info {
